modified keybinding and polybar to use default audio sink

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -451,7 +451,7 @@ ramp-signal-4 = 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
+;sink = alsa_output.pci-0000_12_00.3.analog-stereo
 use-ui-max = false
 
 interval = 5
@@ -467,7 +467,7 @@ format-muted-foreground = ${color.red}
 format-muted-padding = 1
 
 [module/pulseaudio_i]
-type = internal/alsa
+type = internal/pulseaudio
 
 format-volume = <ramp-volume>
 format-volume-background = ${color.bg}
